# ZPR_Draughts

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  ConnectionProtocolHandler.cpp  ConnectionProtocolHandler.hpp  DartConfiguration.tcl  Game.hpp  Makefile  README.md  Room.hpp  RoomManager.hpp  Server.cpp  Server.hpp  a.out  checkers  cmake_install.cmake  main.cpp
Documentation/: config
sources/: Action.hpp  Adder.h  Board.cpp  Board.hpp  BoardSignal.hpp  CMakeLists.txt  CTestTestfile.cmake  Client.hpp  ClientManager.cpp  ClientManager.hpp  ConnectionProtocolHandler.cpp  ConnectionProtocolHandler.hpp  EnterRoomSignal.hpp  Game.hpp  GameEndSignal.hpp  GameObserver.cpp  GameObserver.hpp  Gameboard.cpp  Gameboard.hpp  LeaveRoomSignal.hpp  Makefile  Message.cpp  Message.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  NewGameSignal.hpp  NewRoomRequestSignal.hpp  NickRequestSignal.hpp  OutputStreams.cpp  Pawn.hpp  PermissionSignal.hpp  PieceKind.hpp  Player.cpp  Player.hpp  PlayerColour.hpp  PlayerManager.cpp  PlayerManager.hpp  Point.hpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  (+13 more)
sources/GameLogic/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  PieceKind.hpp  Player.cpp  PlayerColour.hpp  Point.hpp
sources/Signals/: BoardSignal.cpp  BoardSignal.hpp  EnterRoomSignal.cpp  EnterRoomSignal.hpp  GameEndSignal.cpp  GameEndSignal.hpp  LeaveRoomSignal.cpp  LeaveRoomSignal.hpp  MoveSignal.cpp  MoveSignal.hpp  NewGameSignal.cpp  NewGameSignal.hpp  NewPlayerInRoomSignal.hpp  NewRoomRequestSignal.cpp  NewRoomRequestSignal.hpp  NickRequestSignal.cpp  NickRequestSignal.hpp  OpponentEnteredTheRoomSignal.cpp  OpponentEnteredTheRoomSignal.hpp  OpponentLeftRoomSignal.cpp  OpponentLeftRoomSignal.hpp  PermissionSignal.cpp  PermissionSignal.hpp  RoomsRequestSignal.cpp  RoomsRequestSignal.hpp  RoomsSignal.cpp  RoomsSignal.hpp  SendSignalDelegate.cpp  SendSignalDelegate.hpp  Signal.cpp  Signal.hpp  SignalFactory.hpp  StaticInit.cpp  TextMessage.cpp  TextMessage.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  ClientManagerTests.cpp  ConnectionProtocolHandlerTests.cpp  CustomTests.cpp  GameEngineTests.cpp  Makefile  OutputStreams.cpp  PlayerManagerTests.cpp  PlayerTests.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  RoomManagerTests.cpp  RoomTests.cpp  Tests  Tests.vcxproj  Tests.vcxproj.filters  cmake_install.cmake  runTests.vcxproj  runTests.vcxproj.filters  test_main.cpp
tests/Helpers/: TestConnectionProtocolHandler.cpp  TestConnectionProtocolHandler.hpp  TestGameObserver.cpp  TestGameObserver.hpp  TestSignalSendDelegate.cpp  TestSignalSendDelegate.hpp
tests/Testing/Temporary/: CTestCostData.txt
tests/Tests.dir/Release/Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/Win32/Release/runTests/runTests.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  runTests.lastbuildstate
web_client/: custom.css  game.js  gui.js  index.html  skeleton.css  sockets.js
